# egui_autocomplete

./: .editorconfig  .envrc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  demo-43101d3a30af1077.js  demo-43101d3a30af1077_bg.wasm  demo-8b58202f317170ff.js  demo-8b58202f317170ff_bg.wasm  demo-a6197a9abc6dbaf.js  demo-a6197a9abc6dbaf_bg.wasm  demo.js  demo_bg.wasm  flake.nix  index.html  shell.nix  sw.js  toolchain.toml
.github/: codecov.yml
.github/workflows/: check.yml  demo.yml  test.yml
demo/: Cargo.toml  README.md  Trunk.toml  index.html
demo/assets/: sw.js
demo/src/: app.rs  main.rs
docs/: demo.js  demo_bg.wasm  index.html  sw.js
examples/: example.rs
src/: lib.rs
