[package]
name = "egui_autocomplete"
version = "3.0.0"
edition = "2021"
license = "MIT"
description = "Auto complete text box for egui"
readme = "README.md"
repository = "https://github.com/JakeHandsome/egui_autocomplete"
authors = ["Jake Hansen"]
keywords = ["egui"]
rust-version = "1.72"

[dependencies]
fuzzy-matcher = "0.3.7"
egui = { version = "0.24", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
rayon = "1.8.0"

[dev-dependencies]
eframe = { version = "0.24", default-features = false, features = [
    "default_fonts",
    "glow",
] }
criterion = "0.5.1"

[workspace]
members = ["demo"]

[features]
serde = ["dep:serde", "egui/persistence"]

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
