[package]
name = "egui_autocomplete"
version = "6.0.1"
edition = "2021"
license = "MIT"
description = "Auto complete text box for egui"
readme = "README.md"
repository = "https://github.com/JakeHandsome/egui_autocomplete"
authors = ["Jake Hansen"]
keywords = ["egui"]
rust-version = "1.72"

[dependencies]
fuzzy-matcher = "0.3.7"
serde = { version = "1", features = ["derive"], optional = true }
egui.workspace = true
eframe.workspace = true

[workspace]
members = ["demo"]

[workspace.dependencies]
egui = { version = "0.28", default-features = false }
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts",
    "glow",
] }

[features]
serde = ["dep:serde", "egui/persistence"]

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
