[package]
name = "egui_autocomplete_demo"
version = "0.1.0"
edition = "2021"


[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
   "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
   "default_fonts", # Embed the default egui fonts.
   "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }

egui_autocomplete = { path = "../" }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
