[package]
name = "demo"
version = "0.1.0"
edition = "2021"


[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
   "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
   "default_fonts", # Embed the default egui fonts.
   "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
log = "0.4"

egui_autocomplete = { path = "../" }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
