[package]
name = "demo"
version = "0.1.0"
edition = "2021"


[dependencies]
egui.workspace = true
eframe.workspace = true
log = "0.4"
static-toml = "1"


egui_autocomplete = { path = "../" }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"
